--- a/index.html
+++ b/index.html
@@ -1,201 +1,204 @@
-
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Personal Portfolio </title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-</head>
+  <body>
+    <!-- Navbar  Section Start -->
+    <header>
+      <a href="#" class="logo">Hitesh <span> Meta</span>.</a>
 
-<body>
-<!-- Navbar  Section Start -->
-<header>
-    <a href="#" class="logo">Hitesh <span> Meta</span>.</a>
+      <div class="bx bx-menu" id="menu-icon"></div>
 
-    <div class="bx bx-menu" id="menu-icon"></div>
-
-    <ul class="navbar">
+      <ul class="navbar">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#services">Services</a></li>
         <li><a href="#contact">Contact</a></li>
         <div class="bx bx-moon" id="darkmode"></div>
-    </ul>
-</header>
-<!-- Navbar Section End -->
-<!-- Home Section Start -->
-<section class="home" id="home">
-    <div class="social">
-        <a href="#"><i class='bx bxl-github'></i></a>
-        <a href="#"><i class='bx bxl-instagram'></i></a>
-        <a href="#"><i class='bx bxl-facebook'></i></a>
-    </div>
-    <div class="home-img">
-        <img src="main.png" class="profile-pic" alt="">
-    </div>
-    <div class="home-text">
+      </ul>
+    </header>
+    <!-- Navbar Section End -->
+    <!-- Home Section Start -->
+    <section class="home" id="home">
+      <div class="social">
+        <a href="https://github.com/hiteshmeta85/" target="_blank"
+          ><i class="bx bxl-github"></i
+        ></a>
+        <a href="https://www.instagram.com/meta.hitesh85/" target="_blank"
+          ><i class="bx bxl-instagram"></i
+        ></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
+      </div>
+      <div class="home-img">
+        <img src="main.png" class="profile-pic" alt="" />
+      </div>
+      <div class="home-text">
         <span>Hello, I'm</span>
         <h1>Hitesh Meta</h1>
         <h2>Fullstack Developer</h2>
-        <p>Lorem ipsum dolor sit amet cons <br> adipisicing elit. Minima, consectetur <br> ullam?</p>
+        <p>
+          Lorem ipsum dolor sit amet cons <br />
+          adipisicing elit. Minima, consectetur <br />
+          ullam?
+        </p>
         <a href="#contact" class="btn">Download CV</a>
-    </div>
-</section>
-<!-- Home Section End -->
-<!-- About Section Start -->
+      </div>
+    </section>
+    <!-- Home Section End -->
+    <!-- About Section Start -->
 
-<section class="about" id="about">
-    <div class="heading">
+    <section class="about" id="about">
+      <div class="heading">
         <h2>About Me</h2>
         <span>Introduction</span>
-    </div>
+      </div>
 
-    <div class="about-container">
+      <div class="about-container">
         <div class="about-img">
-            <img src="main.png" class="profile-pic" alt="">
+          <img src="main.png" class="profile-pic" alt="" />
         </div>
         <div class="about-text">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est
-                perferendis dicta. Ad repellendus perferendis minus sunt error eos dicta enim accusantium ipsum
-                veniam debitis quasi sint cum fugiat porro quam, blanditiis a ratione quod!</p>
-            <div class="information">
-                <div class="info-box">
-                    <i class='bx bxs-user'></i>
-                    <span>Name</span>
-                </div>
-
-                <div class="info-box">
-                    <i class='bx bxs-phone'></i>
-                    <span>+91 9876543210</span>
-                </div>
-
-                <div class="info-box">
-                    <i class='bx bxs-envelope'></i>
-                    <span>csipce@mes.ac.in</span>
-                </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+            beatae eius quae ab consequatur est perferendis dicta. Ad
+            repellendus perferendis minus sunt error eos dicta enim accusantium
+            ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a
+            ratione quod!
+          </p>
+          <div class="information">
+            <div class="info-box">
+              <i class="bx bxs-user"></i>
+              <span>Name</span>
             </div>
-            <a href="#" class="btn">Download CV</a>
+
+            <div class="info-box">
+              <i class="bx bxs-phone"></i>
+              <span>+91 9876543210</span>
+            </div>
+
+            <div class="info-box">
+              <i class="bx bxs-envelope"></i>
+              <span>csipce@mes.ac.in</span>
+            </div>
+          </div>
+          <a href="#" class="btn">Download CV</a>
         </div>
-    </div>
-</section>
-<!-- About Section End -->
+      </div>
+    </section>
+    <!-- About Section End -->
 
-<!-- Skills Section Start -->
+    <!-- Skills Section Start -->
 
-<section class="skills" id="skills">
-    <div class="heading">
+    <section class="skills" id="skills">
+      <div class="heading">
         <h2>Skills</h2>
         <span>My Skills</span>
-    </div>
+      </div>
 
-    <div class="skills-container">
+      <div class="skills-container">
         <div class="bars">
+          <div class="bars-box">
+            <h3>HTML</h3>
+            <span>94%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar html-bar"></div>
+          </div>
 
-            <div class="bars-box">
-                <h3>HTML</h3>
-                <span>94%</span>
-                <div class="light-bar"></div>
-                <div class="percent-bar html-bar"></div>
-            </div>
+          <div class="bars-box">
+            <h3>CSS</h3>
+            <span>84%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar css-bar"></div>
+          </div>
 
-            <div class="bars-box">
-                <h3>CSS</h3>
-                <span>84%</span>
-                <div class="light-bar"></div>
-                <div class="percent-bar css-bar"></div>
-            </div>
+          <div class="bars-box">
+            <h3>JavaScript</h3>
+            <span>74%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar js-bar"></div>
+          </div>
 
-            <div class="bars-box">
-                <h3>JavaScript</h3>
-                <span>74%</span>
-                <div class="light-bar"></div>
-                <div class="percent-bar js-bar"></div>
-            </div>
-
-            <div class="bars-box">
-                <h3>React</h3>
-                <span>80%</span>
-                <div class="light-bar"></div>
-                <div class="percent-bar react-bar"></div>
-            </div>
+          <div class="bars-box">
+            <h3>React</h3>
+            <span>80%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar react-bar"></div>
+          </div>
         </div>
         <div class="skills-img">
-            <img src="main.png" class="profile-pic" alt="Skill">
+          <img src="main.png" class="profile-pic" alt="Skill" />
         </div>
-    </div>
-</section>
-<!-- Skills Section End -->
-<!-- Services Section Start -->
-<section class="services" id="services">
-    <div class="heading">
+      </div>
+    </section>
+    <!-- Skills Section End -->
+    <!-- Services Section Start -->
+    <section class="services" id="services">
+      <div class="heading">
         <h2>Services</h2>
         <span>Our Services</span>
-    </div>
-    <div class="services-content">
-
+      </div>
+      <div class="services-content">
         <div class="services-box">
-            <i class='bx bx-code-alt'></i>
-            <h3>Web Development</h3>
-            <a href="#">Learn More</a>
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <a href="#">Learn More</a>
         </div>
 
         <div class="services-box">
-            <i class='bx bx-server'></i>
-            <h3>Backend Development</h3>
-            <a href="#">Learn More</a>
+          <i class="bx bx-server"></i>
+          <h3>Backend Development</h3>
+          <a href="#">Learn More</a>
         </div>
         <div class="services-box">
-            <i class='bx bx-brush'></i>
-            <h3>UI/UX Design</h3>
-            <a href="#">Learn More</a>
+          <i class="bx bx-brush"></i>
+          <h3>UI/UX Design</h3>
+          <a href="#">Learn More</a>
         </div>
 
         <div class="services-box">
-            <i class='bx bxl-android'></i>
-            <h3>App Development</h3>
-            <a href="#">Learn More</a>
+          <i class="bx bxl-android"></i>
+          <h3>App Development</h3>
+          <a href="#">Learn More</a>
         </div>
-    </div>
-</section>
-<!-- Services Section End -->
+      </div>
+    </section>
+    <!-- Services Section End -->
 
-<!-- Contact Section Start -->
-<section class="contact" id="contact">
-    <div class="heading">
+    <!-- Contact Section Start -->
+    <section class="contact" id="contact">
+      <div class="heading">
         <h2>Contact</h2>
         <span>Connect With Us</span>
-    </div>
-    <div class="contact-form">
+      </div>
+      <div class="contact-form">
         <form action="">
-            <input type="text" placeholder="Your Name">
-            <input type="email" name="" id="" placeholder="Your Email">
-            <textare name="" id="" cols="30" rows="10" placeholder="Write Message Here..."></textare>
-                                <input type="button" value="Send" class="contact-button">
-                                </form>
-                            </div>
-                            </section>
-                            <!-- Contact Section End -->
-                         <div class="footer">
-                                <h2>Follow Us</h2>
-                                <div class="footer-social">
-                                    <a href="#"><i class='bx bxl-facebook'></i></a>
-                                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                                    <a href="#"><i class='bx bxl-youtube'></i></a>
-                                </div>
-
-                            </div>
-
-                            <div class="copyright">
-                                © Hitesh | All Right Reserved.</p>
-                            </div>
-                            <!-- Javascript -->
-                            <script src="script.js"></script>
-</body>
-
+          <input type="text" placeholder="Your Name" />
+          <input type="email" name="" id="" placeholder="Your Email" />
+          <textare
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Write Message Here..."
+          ></textare>
+          <input type="button" value="Send" class="contact-button" />
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section End -->
+    <div class="copyright">© Hitesh | All Right Reserved.</div>
+    <!-- Javascript -->
+    <script src="script.js"></script>
+  </body>
 </html>
