--- a/index.html
+++ b/index.html
@@ -1,278 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>INSERT TITLE HERE</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/superslides.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
 
   <body>
-    <div id="slides">
-      <div class="overlay"></div>
-      <div class="slides-container">
-        <img src="img/lemnis1.png" alt="" />
-        <img src="img/lemnis2.png" alt="" />
+    <!-- Navbar  Section Start -->
+    <header>
+      <a href="#" class="logo">Hitesh <span> Meta</span>.</a>
+
+      <div class="bx bx-menu" id="menu-icon"></div>
+
+      <ul class="navbar">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <div class="bx bx-moon" id="darkmode"></div>
+      </ul>
+    </header>
+    <!-- Navbar Section End -->
+    <!-- Home Section Start -->
+    <section class="home" id="home">
+      <div class="social">
+        <a href="https://github.com/hiteshmeta85/" target="_blank"
+          ><i class="bx bxl-github"></i
+        ></a>
+        <a href="https://www.instagram.com/meta.hitesh85/" target="_blank"
+          ><i class="bx bxl-instagram"></i
+        ></a>
+        <a href="#"><i class="bx bxl-facebook"></i></a>
       </div>
-      <div class="titleMessage">
-        <div class="heading">
-          <p class="main">Simple Portfolio</p>
-          <p class="sub typed"></p>
-        </div>
+      <div class="home-img">
+        <img src="main.png" class="profile-pic" alt="" />
       </div>
-    </div>
-
-    <!-- Navbar -->
-    <nav id="navigation" class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">NAME</a>
-
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="#about"
-              >About Me <span class="sr-only"></span
-            ></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#stats">Stats</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <!-- About Me -->
-    <div id="about" class="section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-5">
-            <img class="aboutImage" src="img/lemnisabout.png" alt="" />
-          </div>
-
-          <div class="col-md-7">
-            <h4 class="aboutMe">About Me</h4>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
-              laoreet ex quis leo molestie feugiat. Donec gravida congue enim id
-              cursus. Cras fermentum semper metus at rhoncus. Quisque elementum
-              tristique varius. Sed non quam sit amet dui eleifend congue.
-              Quisque pulvinar, lectus eu sagittis consequat, velit lacus
-              lobortis orci, sed feugiat metus risus vitae ipsum. Donec aliquet
-              mauris urna, et convallis justo sagittis a. Ut urna lacus,
-              tristique ut libero eget, commodo hendrerit massa. Curabitur sit
-              amet diam lobortis, finibus lorem vel, tempus diam. Quisque elit
-              urna, scelerisque eu porta in, sollicitudin a dui. Nunc quis
-              ultrices velit. Proin rhoncus ante a nisi vestibulum, at luctus
-              mauris condimentum. Aenean pulvinar turpis malesuada nunc
-              pharetra, at tincidunt enim fermentum. Donec scelerisque sapien
-              feugiat ligula consequat ultrices. Phasellus elit tellus, lobortis
-              et vestibulum quis, semper vitae augue.
-            </p>
-
-            <p>
-              Aenean tincidunt nisl orci, sed faucibus augue lobortis ac. Ut ac
-              fermentum leo, quis rhoncus sapien. Nulla facilisi. Fusce eget
-              accumsan sapien. Ut lacinia ex eu feugiat commodo. Curabitur
-              varius lectus at risus porttitor porttitor. Vivamus suscipit
-              sodales metus vel pulvinar. Duis fringilla semper augue vitae
-              venenatis. Praesent posuere, nunc non condimentum egestas, magna
-              risus ornare metus, nec iaculis enim orci at ante. Nam eros
-              turpis, pharetra non imperdiet vitae, dictum quis mauris. Vivamus
-              egestas aliquet risus, quis ultricies arcu tincidunt vel.
-              Curabitur luctus ac orci ut consectetur. Nulla rutrum orci quis
-              elit elementum aliquet. Proin at augue libero. Pellentesque
-              habitant morbi tristique senectus et netus et malesuada fames ac
-              turpis egestas. Integer imperdiet dui a vulputate cursus.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Skills -->
-    <div id="skills" class="skillsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <h2>MY SKILLS</h2>
-            <p>Main topic of skill</p>
-          </div>
-
-          <div class="owl-carousel owl-theme">
-            <div class="skill">
-              <span class="chart" data-percent="85">
-                <span class="percent">85</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>SKILL1</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="60">
-                <span class="percent">60</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>SKILL2</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="80">
-                <span class="percent">80</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>SKILL3</h4>
-            </div>
-
-            <div class="skill">
-              <span class="chart" data-percent="45">
-                <span class="percent">45</span>
-                <canvas height="152" width="152"></canvas>
-              </span>
-              <h4>SKILL4</h4>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Stats -->
-    <div id="stats" class="statsSection section">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-globe"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">59</h2>
-                  <h3>STAT1</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-address-book"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">14</h2>
-                  <h3>STAT2</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fa fa-coffee"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">999999</h2>
-                  <h3>Cups Of Coffee</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-3 col-sm-6">
-            <div class="squareItem">
-              <div class="squareInnerContainer">
-                <div class="squareIcon">
-                  <i class="fas fa-robot"></i>
-                </div>
-                <div class="squareContent">
-                  <h2 class="counter">3</h2>
-                  <h3>STAT3</h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Contact -->
-    <div id="contact" class="contactSection section">
-      <div class="col-md-12 text-center">
-        <p class="subHeading">Do you want to contact me?</p>
-        <h2>Send an email now.</h2>
-        <a href="mailTo:yourmail@gmail.com" class="contactButton"
-          >Contact me!</a
-        >
-      </div>
-    </div>
-
-    <!-- Copyright -->
-
-    <div class="copyrightSection">
-      <div class="col-md-12 text-center">
+      <div class="home-text">
+        <span>Hello, I'm</span>
+        <h1>Hitesh Meta</h1>
+        <h2>Fullstack Developer</h2>
         <p>
-          copyright &copy; 2021 some rights reserved | 85% of website was made
-          by subuthai
+          Lorem ipsum dolor sit amet cons <br />
+          adipisicing elit. Minima, consectetur <br />
+          ullam?
         </p>
+        <a href="#contact" class="btn">Download CV</a>
       </div>
-    </div>
+    </section>
+    <!-- Home Section End -->
+    <!-- About Section Start -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.2/countUp.min.js"></script>
-    <script src="js/countUp-jquery.js"></script>
-    <script src="js/jquery.superslides.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.easypiechart.min.js"></script>
-    <script src="js/typed.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"
-    ></script>
-    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
-    <script src="js/script.js"></script>
+    <section class="about" id="about">
+      <div class="heading">
+        <h2>About Me</h2>
+        <span>Introduction</span>
+      </div>
+
+      <div class="about-container">
+        <div class="about-img">
+          <img src="main.png" class="profile-pic" alt="" />
+        </div>
+        <div class="about-text">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
+            beatae eius quae ab consequatur est perferendis dicta. Ad
+            repellendus perferendis minus sunt error eos dicta enim accusantium
+            ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a
+            ratione quod!
+          </p>
+          <div class="information">
+            <div class="info-box">
+              <i class="bx bxs-user"></i>
+              <span>Name</span>
+            </div>
+
+            <div class="info-box">
+              <i class="bx bxs-phone"></i>
+              <span>+91 9876543210</span>
+            </div>
+
+            <div class="info-box">
+              <i class="bx bxs-envelope"></i>
+              <span>csipce@mes.ac.in</span>
+            </div>
+          </div>
+          <a href="#" class="btn">Download CV</a>
+        </div>
+      </div>
+    </section>
+    <!-- About Section End -->
+
+    <!-- Skills Section Start -->
+
+    <section class="skills" id="skills">
+      <div class="heading">
+        <h2>Skills</h2>
+        <span>My Skills</span>
+      </div>
+
+      <div class="skills-container">
+        <div class="bars">
+          <div class="bars-box">
+            <h3>HTML</h3>
+            <span>94%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar html-bar"></div>
+          </div>
+
+          <div class="bars-box">
+            <h3>CSS</h3>
+            <span>84%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar css-bar"></div>
+          </div>
+
+          <div class="bars-box">
+            <h3>JavaScript</h3>
+            <span>74%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar js-bar"></div>
+          </div>
+
+          <div class="bars-box">
+            <h3>React</h3>
+            <span>80%</span>
+            <div class="light-bar"></div>
+            <div class="percent-bar react-bar"></div>
+          </div>
+        </div>
+        <div class="skills-img">
+          <img src="main.png" class="profile-pic" alt="Skill" />
+        </div>
+      </div>
+    </section>
+    <!-- Skills Section End -->
+    <!-- Services Section Start -->
+    <section class="services" id="services">
+      <div class="heading">
+        <h2>Services</h2>
+        <span>Our Services</span>
+      </div>
+      <div class="services-content">
+        <div class="services-box">
+          <i class="bx bx-code-alt"></i>
+          <h3>Web Development</h3>
+          <a href="#">Learn More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bx-server"></i>
+          <h3>Backend Development</h3>
+          <a href="#">Learn More</a>
+        </div>
+        <div class="services-box">
+          <i class="bx bx-brush"></i>
+          <h3>UI/UX Design</h3>
+          <a href="#">Learn More</a>
+        </div>
+
+        <div class="services-box">
+          <i class="bx bxl-android"></i>
+          <h3>App Development</h3>
+          <a href="#">Learn More</a>
+        </div>
+      </div>
+    </section>
+    <!-- Services Section End -->
+
+    <!-- Contact Section Start -->
+    <section class="contact" id="contact">
+      <div class="heading">
+        <h2>Contact</h2>
+        <span>Connect With Us</span>
+      </div>
+      <div class="contact-form">
+        <form action="">
+          <input type="text" placeholder="Your Name" />
+          <input type="email" name="" id="" placeholder="Your Email" />
+          <textare
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Write Message Here..."
+          ></textare>
+          <input type="button" value="Send" class="contact-button" />
+        </form>
+      </div>
+    </section>
+    <!-- Contact Section End -->
+    <div class="copyright">© Hitesh | All Right Reserved.</div>
+    <!-- Javascript -->
+    <script src="script.js"></script>
   </body>
 </html>
