--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar  Section Start -->
     <header>
-      <a href="#" class="logo">Hitesh <span> Meta</span>.</a>
+      <a href="#" class="logo">John <span> Doe</span>.</a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -24,7 +24,6 @@
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
         <div class="bx bx-moon" id="darkmode"></div>
       </ul>
     </header>
@@ -35,7 +34,7 @@
         <a href="https://github.com/hiteshmeta85/" target="_blank"
           ><i class="bx bxl-github"></i
         ></a>
-        <a href="https://www.instagram.com/meta.hitesh85/" target="_blank"
+        <a href="https://www.instagram.com/_csipce/" target="_blank"
           ><i class="bx bxl-instagram"></i
         ></a>
         <a href="#"><i class="bx bxl-facebook"></i></a>
@@ -45,14 +44,13 @@
       </div>
       <div class="home-text">
         <span>Hello, I'm</span>
-        <h1>Hitesh Meta</h1>
+        <h1>John Doe</h1>
         <h2>Fullstack Developer</h2>
         <p>
           Lorem ipsum dolor sit amet cons <br />
           adipisicing elit. Minima, consectetur <br />
           ullam?
         </p>
-        <a href="#contact" class="btn">Download CV</a>
       </div>
     </section>
     <!-- Home Section End -->
@@ -79,7 +77,7 @@
           <div class="information">
             <div class="info-box">
               <i class="bx bxs-user"></i>
-              <span>Name</span>
+              <span>John Doe</span>
             </div>
 
             <div class="info-box">
@@ -92,7 +90,6 @@
               <span>csipce@mes.ac.in</span>
             </div>
           </div>
-          <a href="#" class="btn">Download CV</a>
         </div>
       </div>
     </section>
@@ -175,29 +172,8 @@
     </section>
     <!-- Services Section End -->
 
-    <!-- Contact Section Start -->
-    <section class="contact" id="contact">
-      <div class="heading">
-        <h2>Contact</h2>
-        <span>Connect With Us</span>
-      </div>
-      <div class="contact-form">
-        <form action="">
-          <input type="text" placeholder="Your Name" />
-          <input type="email" name="" id="" placeholder="Your Email" />
-          <textare
-            name=""
-            id=""
-            cols="30"
-            rows="10"
-            placeholder="Write Message Here..."
-          ></textare>
-          <input type="button" value="Send" class="contact-button" />
-        </form>
-      </div>
-    </section>
     <!-- Contact Section End -->
-    <div class="copyright">© Hitesh | All Right Reserved.</div>
+    <div class="copyright">© John Doe | All Right Reserved.</div>
     <!-- Javascript -->
     <script src="script.js"></script>
   </body>
