--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <a href="https://www.instagram.com/_csipce/" target="_blank"
           ><i class="bx bxl-instagram"></i
         ></a>
-        <a href="#"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.facebook.com/CSI.PCE/" target="_blank"
+        ><i class="bx bxl-facebook"></i
+          ></a>
       </div>
       <div class="home-img">
         <img src="main.png" class="profile-pic" alt="" />
