updated portfolio details

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Navbar  Section Start -->
     <header>
-      <a href="#" class="logo">John <span> Doe</span>.</a>
+      <a href="#" class="logo">Madhura <span> Anuse</span>.</a>
 
       <div class="bx bx-menu" id="menu-icon"></div>
 
@@ -31,7 +31,7 @@
     <!-- Home Section Start -->
     <section class="home" id="home">
       <div class="social">
-        <a href="https://github.com/hiteshmeta85/" target="_blank"
+        <a href="https://github.com/MadhuraAnuse/" target="_blank"
           ><i class="bx bxl-github"></i
         ></a>
         <a href="https://www.instagram.com/_csipce/" target="_blank"
@@ -46,8 +46,8 @@
       </div>
       <div class="home-text">
         <span>Hello, I'm</span>
-        <h1>John Doe</h1>
-        <h2>Fullstack Developer</h2>
+        <h1>Madhura Anuse</h1>
+        <h2>Science student</h2>
         <p>
           Lorem ipsum dolor sit amet cons <br />
           adipisicing elit. Minima, consectetur <br />
@@ -70,16 +70,12 @@
         </div>
         <div class="about-text">
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis
-            beatae eius quae ab consequatur est perferendis dicta. Ad
-            repellendus perferendis minus sunt error eos dicta enim accusantium
-            ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a
-            ratione quod!
+          Save water, drink Sprite!
           </p>
           <div class="information">
             <div class="info-box">
               <i class="bx bxs-user"></i>
-              <span>John Doe</span>
+              <span>Madhura Anuse</span>
             </div>
 
             <div class="info-box">
@@ -89,7 +85,7 @@
 
             <div class="info-box">
               <i class="bx bxs-envelope"></i>
-              <span>csipce@mes.ac.in</span>
+              <span>madhuraanuse@gmail.com</span>
             </div>
           </div>
         </div>
