--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
         <h1>Madhura Anuse</h1>
         <h2>Science student</h2>
         <p>
-          Lorem ipsum dolor sit amet cons <br />
-          adipisicing elit. Minima, consectetur <br />
-          ullam?
+          Save water, drink Sprite!
         </p>
       </div>
     </section>
