--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="about-text">
           <p>
-          Save water, drink Sprite!
+          Kuch nhi.
           </p>
           <div class="information">
             <div class="info-box">
